--- a/htmlassignment/index .html
+++ b/htmlassignment/index .html
@@ -14,7 +14,7 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="notes.html">About Me</a>
+                    <a href="notes.html1">About Me</a>
                 </li>
             </ul>
         </nav>
