fixes broken repo (rob)

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -6,8 +6,18 @@
     <title>htmlassignmment2</title>
 </head>
 <body>
-    <heaader>
-        <h1>Description about html tags</h1>
+    <header>
+        <h1>Notes about HTML tags</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="notes.html">About Me</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
         <dl>
