--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -20,14 +20,16 @@
         </nav>
     </header>
     <article>
-        <!-- In the paragraphs, you need <sup>, <abbr>, and <em> -->
+        <p><em>Butter</em></p>
+        <p>Class10<sup>th</sup></p>
+        <p>The<abbr title="Algonquin Collage">AC</abbr>is the best collage in Ottawa</p>              
         <h2>About Me</h2>
-        <p>Write about you...</p>
-        <p>Write more about you...</p>
+        <p>My name is Sandeep Kaur. I am international student. I come from India.</p>
+        <p>I love gardening. When, I feel stressed,on that I do gardening bacause it act as a stress buster for me.Also, I am very hardworker,calm and extrovert person. </p>
     </article>
     <blockquote>
-        Type your favorite quote.
-        <cite>Who said that quote!</cite>
+       " Live as if you were to die tommorrow"   
+        -<cite>Mahatma Gandhi!</cite>
     </blockquote>
     <section>
         <h2>Image</h2>
