--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><link href="css/style.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sand0431html assignment</title>
 </head>
 <body>
     <header>
-        <h1>Sandeep Kaur!</h1>
+        <h1 class="site-title">Sandeep Kaur </h1>
         <nav>
             <ul>
                 <li>
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="notes.html">About Me</a>
+                    <a href="notes.html">Notes</a>
                 </li>
             </ul>
         </nav>
@@ -23,7 +23,7 @@
         <p><em>Butter</em></p>
         <p>Class10<sup>th</sup></p>
         <p>The<abbr title="Algonquin Collage">AC</abbr>is the best collage in Ottawa</p>              
-        <h2>About Me</h2>
+        <h2>notes</h2>
         <p>My name is Sandeep Kaur. I am international student. I come from India.</p>
         <p>I love gardening. When, I feel stressed,on that I do gardening bacause it act as a stress buster for me.Also, I am very hardworker,calm and extrovert person. </p>
     </article>
@@ -33,16 +33,19 @@
     </blockquote>
     <section>
         <h2>Image</h2>
-        <img src="images/kaur_sandeep.jpg" alt="Myself">
+        <img id="my-image" src="images/kaur_sandeep.jpg" alt="Myself">
     </section> 
     <section>
         <h2>My hobbies</h2>
-        <ul>
+        <ul class="hobbies list">
             <li>Listening music</li>
             <li>Gardening</li>         
             <li>Reading</li>
         </ul>
-    </section>  
+    </section> 
+    <footer>
+        <p>&copy;2024 sandeep kaur.all right reserved.</p>
+    </footer> 
 </body>
 </html>        
            
