--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><link href="css/style.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>htmlassignmment2</title>
 </head>
 <body>
     <header>
-        <h1>Notes about HTML tags</h1>
+        <h1 class="site-title"> HTML notes</h1>
         <nav>
             <ul>
                 <li>
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="notes.html">About Me</a>
+                    <a href="notes.html">notes</a>
                 </li>
             </ul>
         </nav>
