--- a/midterm/index.html
+++ b/midterm/index.html
@@ -14,15 +14,16 @@
     <header>
         <nav role="navigation">
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact</li>
             </ul>
         </nav>
     </header>
 
     <main>
         <article>
+            <h2>Importance of flower</h2>
             <img src="images/flower image.jpg" alt="article image">
             <p>A flower, also known as a bloom or blossom, is the reproductive structure found in flowering plants. Flowers consist of a combination of vegetative organs sepals that enclose and protect the developing flower, petals that attract pollinators, and reproductive organs that produce gametophytes, which in flowering plants produce gametes. The male gametophytes, which produce sperm, are enclosed within pollen grains produced in the anthers. The female gametophytes are contained within the ovules produced in the carpels.In a world where we are so often bombarded with negativity, it’s important to take a step back and appreciate the simple things in life – like flowers. Not only do they add beauty and color to our surroundings, but they also have a calming effect on the mind and body. </p>
         </article>
@@ -40,20 +41,22 @@
             <div class="empty-box">
                 <h2>Contact Form</h2>
                 <form action="submit" method="post">
-                    <label for="name">Name:</label>
+                    <label for="name">Name</label>
                     <input type="text" id="name" name="name">
 
-                    <label for="email">Email:</label>
+                    <label for="email">Email</label>
                     <input type="email" id="email" name="email">
-                    <label for="message">Message:</label>
+                    
+                    <label for="message">Message</label>
                     <textarea id="message" name="message"></textarea>
+                                
 
                     <button type="submit">Submit</button>
                 </form>
             </div>
         </address>
         <footer>
-            &copy;Sandeep Kaur01
+            &copy;Sandeep Kaur 01
         </footer>
     </main>
     </body>
