--- a/midterm/index.html
+++ b/midterm/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Midterm file</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
@@ -46,7 +46,7 @@
 
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email">
-                    
+
                     <label for="message">Message</label>
                     <textarea id="message" name="message"></textarea>
                                 
