final fully done

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -83,7 +83,7 @@
             <h2>Our Team</h2>
             <img src="images/john.jpg" alt="john doe">
             <h5>john doe</h5>
-            <h4>CEO and co owner</h4>
+            <h4>CEO and Co owner</h4>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique error ut exercitationem laborum nostrum natus tenetur. Odio quo doloremque vitae placeat. Facilis pariatur quam animi error, neque cum placeat necessitatibus!</p>
 
            </section>
